Add properties to StructureFinder system